# jabba

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
src/: AlignedRead.cpp  AlignedRead.hpp  Alignment.cpp  Alignment.hpp  CMakeLists.txt  Graph.cpp  Graph.hpp  GraphChain.cpp  GraphChain.hpp  InexactSeed.hpp  Input.hpp  InterNodeChain.cpp  InterNodeChain.hpp  IntraNodeChain.cpp  IntraNodeChain.hpp  LocalAlignment.hpp  Node.hpp  Nucleotide.cpp  Nucleotide.hpp  Read.hpp  ReadCorrection.cpp  ReadCorrectionHandler.cpp  ReadCorrectionHandler.hpp  ReadLibrary.cpp  ReadLibrary.hpp  Seed.hpp  SeedFinder.cpp  SeedFinder.hpp  Sequence.cpp  Sequence.hpp  Settings.cpp  Settings.hpp  TNode.hpp  TString.cpp  TString.hpp  library.cpp  library.h  tkmer.h  util.cpp  util.h
src/mummer/: Makefile  mummer.cpp  readme.txt  sparseSA.cpp  sparseSA.hpp
src/readfile/: fastqfile.cpp  readfile.cpp  readfile.h
src/ssw/: ssw.c
